removed transitions for everything, causes performance issues on theme changes. changed the opacity of Headings (SUBJECT TO CHANGE ON DARK MODE.) remove the arrow box as a whole for NOW (performance yet again)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -157,23 +157,6 @@ html {
     scroll-padding: 2rem;
 }
 
-body,
-main,
-header,
-footer,
-section,
-article,
-div,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    transition-duration: 300ms;
-}
-
 ::selection {
     background: --alpha(var(--color-link) / 20%);
 }
